Temporarily removed texures

--- a/styles/face-styles.css
+++ b/styles/face-styles.css
@@ -24,7 +24,7 @@
   background-size: 100%;
   background-color: floralwhite;
   background-position: center;
-  background-image: url("../images/clean-gray-paper.png");
+  /*background-image: url("../images/clean-gray-paper.png");*/
 }
 
 .faceShadow {
