--- a/styles/styles.css
+++ b/styles/styles.css
@@ -7,7 +7,7 @@ html {
 body {
     font-family: 'Montserrat', sans-serif;
     background-color: #6E7359;
-    background-image: url("../images/concrete-wall-2.png");
+    /*background-image: url("../images/concrete-wall-2.png");*/
     background-size: 697px;
     box-shadow: inset 0px 80px 400px 50px rgba(0, 0, 0, 0.35);
     margin: 0;
